--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "@my-webpage",
   "private": true,
@@ -10,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",  
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.22.0",
